fix: add missing border

--- a/content/main.css
+++ b/content/main.css
@@ -3880,6 +3880,14 @@ button.build-action-item:hover {
   transform: scale(1.02);
 }
 
+.keybindings-controls {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  border-top: 0.1cqh solid rgba(255, 255, 255, 0.2);
+}
+
 .keybindings-wrapper {
   width: 100%;
   height: 100%;
@@ -3892,6 +3900,7 @@ button.build-action-item:hover {
   overflow-x: hidden;
   margin-right: 1cqh;
 }
+
 
 .keybindings-wrapper::-webkit-scrollbar {
   height: 100%;
